rf: notebox, textbox helpers, hotkeys fixed, removed some scrollbars

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,6 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-hidden {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+
+  .max-h-85vh {
+    max-height: 85vh;
+  }
+}
 /* 
 * {
   font-family: "Poppins", sans-serif !important;
